# fuck8s

./: Cargo.toml  README.md
src/: main.rs
src/app/: mod.rs  state_machine.rs
src/controller/: manager.rs  mod.rs
src/event/: events.rs  keys.rs  mod.rs
src/handler/: mod.rs
src/handler/home/: mod.rs
src/handler/network/: mod.rs
src/handler/workload/: mod.rs
src/storage/: mod.rs
src/ui/: banner.rs  dashboard.rs  mod.rs  network.rs  util.rs  workload.rs
