[package]
name = "fuck8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17"
crossterm = "0.22"
argh = "0.1"
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
# disable rust-tls
kube = { version = "0.70.0",  features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"]}
# futures-util = "0.3"
anyhow = "1.0"
eyre = "0.6.8"
log = "0.4.16"
tui-logger = "0.7.1"
futures = "0.3"
